<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24px"
        android:orientation="vertical"
        android:background="@color/white" >

        <EditText
            android:id="@+id/user_pwd_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_30px"
            android:layout_marginTop="@dimen/dim_30px"
            android:layout_marginBottom="@dimen/dim_30px"
            android:inputType="textPassword"
            android:background="@null"
            android:textColor="@color/gray1"
            android:hint="@string/current_pwd"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray3" />
        <EditText
            android:id="@+id/user_pwd_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_30px"
            android:layout_marginTop="@dimen/dim_30px"
            android:layout_marginBottom="@dimen/dim_30px"
            android:inputType="textPassword"
            android:background="@null"
            android:textColor="@color/gray1"
            android:hint="@string/new_pwd"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray3" />
        <EditText
            android:id="@+id/user_pwd_new1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_30px"
            android:layout_marginTop="@dimen/dim_30px"
            android:layout_marginBottom="@dimen/dim_30px"
            android:background="@null"
            android:inputType="textPassword"
            android:textColor="@color/gray1"
            android:hint="@string/confirm_pwd"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_pwd_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_24px">

        <ImageView
            android:id="@+id/user_pwd_show_img"
            android:layout_marginLeft="@dimen/dim_30px"
            android:layout_width="@dimen/dim_32px"
            android:layout_height="@dimen/dim_32px"
            android:src="@mipmap/icon_pwd_unselect" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_10px"
            android:textColor="@color/gray1"
            android:text="@string/show_pwd" />
    </LinearLayout>

    <Button
        android:id="@+id/user_pwd_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dim_30px"
        android:layout_marginLeft="@dimen/dim_30px"
        android:layout_marginRight="@dimen/dim_30px"
        android:layout_marginStart="@dimen/dim_30px"
        android:layout_marginTop="@dimen/dim_30px"
        android:background="@drawable/btn_orange_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/dim_28px"
        android:paddingTop="@dimen/dim_28px"
        android:text="@string/confirm_commit"
        android:textColor="@color/white1"
        android:textSize="@dimen/dim_32px_sp"/>

</LinearLayout>
